--- a/weatherappmodule/src/main/res/layout/fragment_information.xml
+++ b/weatherappmodule/src/main/res/layout/fragment_information.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="24dp"/>
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/button_back_stack"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_marginStart="24dp"
