--- a/weatherappmodule/src/main/res/layout/list_of_fixed_cities_weather.xml
+++ b/weatherappmodule/src/main/res/layout/list_of_fixed_cities_weather.xml
@@ -21,8 +21,8 @@
 
     <ImageView
         android:id="@+id/weather_icon_image_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="38.5dp"
+        android:layout_height="38.5dp"
         android:layout_marginTop="53.75dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
