refactor: change width and height properties for ImageView

--- a/weatherappmodule/src/main/res/layout/list_of_search_cities_weather.xml
+++ b/weatherappmodule/src/main/res/layout/list_of_search_cities_weather.xml
@@ -27,8 +27,8 @@
 
     <ImageView
         android:id="@+id/search_icon_of_weather_image_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="38.5dp"
+        android:layout_height="38.5dp"
         android:layout_marginEnd="25.71dp"
         android:layout_marginRight="25.71dp"
         app:layout_constraintBottom_toBottomOf="parent"
