--- a/weatherappmodule/src/main/res/layout/fragment_city.xml
+++ b/weatherappmodule/src/main/res/layout/fragment_city.xml
@@ -1,24 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <EditText
         android:id="@+id/editText"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="80dp"
         android:hint="@string/edit_text_placeholder"
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/search_results_text_view"
+        android:layout_width="0dp"
+        android:layout_height="42dp"
+        android:paddingLeft="24dp"
+        android:gravity="fill_vertical"
+        android:visibility="gone"
+        android:text="@string/search_result_text"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editText"
+        android:paddingStart="24dp"
+        tools:ignore="RtlSymmetry" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_of_fixed_cities_weathers"
-        android:visibility="visible"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,20 +41,20 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_of_search_cities_weathers"
-        android:visibility="invisible"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText" />
+        app:layout_constraintTop_toBottomOf="@+id/search_results_text_view" />
 
     <androidx.constraintlayout.widget.Group
         android:id="@+id/group_message_no_data"
         app:constraint_referenced_ids="icon_no_data_image_view, text_no_data_text_view"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:visibility="invisible"/>
+        android:visibility="gone"/>
 
     <ImageView
         android:id="@+id/icon_no_data_image_view"
