--- a/weatherappmodule/src/main/res/layout/activity_main_screen.xml
+++ b/weatherappmodule/src/main/res/layout/activity_main_screen.xml
@@ -7,20 +7,14 @@
     android:layout_height="match_parent"
     tools:context=".MainScreenActivity">
 
-    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-        android:id="@+id/swipe_refresh_layout"
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/main_screen_view_pager"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/tab_layout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/main_screen_view_pager"
-            android:layout_width="0dp"
-            android:layout_height="0dp"/>
-    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tab_layout"
