--- a/weatherappmodule/src/main/res/layout/fragment_city.xml
+++ b/weatherappmodule/src/main/res/layout/fragment_city.xml
@@ -29,15 +29,20 @@
         android:paddingStart="24dp"
         tools:ignore="RtlSymmetry" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_of_fixed_cities_weathers"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/city_swipe_refresh"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText" />
+        app:layout_constraintTop_toBottomOf="@+id/editText">
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_of_fixed_cities_weathers"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:visibility="visible"/>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_of_search_cities_weathers"
