--- a/weatherappmodule/src/main/res/layout/fragment_daily.xml
+++ b/weatherappmodule/src/main/res/layout/fragment_daily.xml
@@ -15,14 +15,20 @@
         android:layout_marginLeft="24dp"
         android:layout_marginStart="24dp" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_for_daily_forecast"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/daily_swipe_refresh"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="81dp"/>
+        android:layout_marginTop="81dp">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_for_daily_forecast"
+            android:layout_width="0dp"
+            android:layout_height="0dp" />
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
