--- a/weatherappmodule/src/main/res/layout/fragment_today.xml
+++ b/weatherappmodule/src/main/res/layout/fragment_today.xml
@@ -6,15 +6,20 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_for_today_tab"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/today_swipe_refresh"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        tools:listitem="@layout/list_of_hourly_forecast"
-        tools:itemCount="4"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_for_today_tab"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            tools:listitem="@layout/list_of_hourly_forecast"
+            tools:itemCount="4" />
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
