--- a/weatherappmodule/src/main/res/layout/activity_splash_screen.xml
+++ b/weatherappmodule/src/main/res/layout/activity_splash_screen.xml
@@ -34,8 +34,8 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <include
-        android:id="@+id/message_no_data"
-        layout="@layout/message_no_data"
+        android:id="@+id/message_no_location"
+        layout="@layout/message_no_location"
         android:visibility="gone"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
