--- a/weatherappmodule/src/main/res/layout/fragment_daily.xml
+++ b/weatherappmodule/src/main/res/layout/fragment_daily.xml
@@ -31,4 +31,9 @@
             android:layout_height="0dp" />
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
+    <include
+        android:id="@+id/message_cannot_get_update_for_daily"
+        layout="@layout/message_cannot_get_update"
+        android:visibility="gone"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
