--- a/weatherappmodule/src/main/res/layout/message_cannot_get_update.xml
+++ b/weatherappmodule/src/main/res/layout/message_cannot_get_update.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -23,15 +24,5 @@
         app:layout_constraintEnd_toEndOf="@+id/icon_no_data_image_view"
         app:layout_constraintStart_toStartOf="@+id/icon_no_data_image_view"
         app:layout_constraintTop_toBottomOf="@+id/icon_no_data_image_view" />
-
-    <TextView
-        android:id="@+id/check_connection"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="@string/check_connection_text"
-        app:layout_constraintEnd_toEndOf="@+id/no_update_text_view"
-        app:layout_constraintStart_toStartOf="@+id/no_update_text_view"
-        app:layout_constraintTop_toBottomOf="@+id/no_update_text_view" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
