--- a/weatherappmodule/src/main/res/layout/fragment_city.xml
+++ b/weatherappmodule/src/main/res/layout/fragment_city.xml
@@ -16,10 +16,13 @@
 
     <EditText
         android:id="@+id/editText"
-        android:layout_width="0dp"
-        android:layout_height="80dp"
+        android:layout_width="327dp"
+        android:layout_height="48dp"
+        android:layout_marginHorizontal="24dp"
+        android:layout_marginVertical="16dp"
         android:hint="@string/edit_text_placeholder"
         android:inputType="text"
+        android:background="@drawable/edit_text_rounder_corner_borders"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -31,6 +34,7 @@
         android:paddingLeft="24dp"
         android:gravity="fill_vertical"
         android:text="@string/search_result_text"
+        android:fontFamily="@font/font_roboto"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText"
@@ -49,6 +53,7 @@
             android:id="@+id/recycler_of_fixed_cities_weathers"
             android:layout_width="0dp"
             android:layout_height="0dp"
+
             android:visibility="visible"/>
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
@@ -70,5 +75,10 @@
         android:id="@+id/no_update_for_city_tab"
         layout="@layout/message_cannot_get_update"
         android:visibility="gone"/>
+
+    <include
+        android:id="@+id/progress_container"
+        layout="@layout/progress_bar"
+        android:visibility="gone" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
