--- a/weatherappmodule/src/main/res/layout/fragment_daily.xml
+++ b/weatherappmodule/src/main/res/layout/fragment_daily.xml
@@ -36,4 +36,9 @@
         layout="@layout/message_cannot_get_update"
         android:visibility="gone"/>
 
+    <include
+        android:id="@+id/progress_container"
+        layout="@layout/progress_bar"
+        android:visibility="gone" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
