--- a/weatherappmodule/src/main/res/layout/fragment_today.xml
+++ b/weatherappmodule/src/main/res/layout/fragment_today.xml
@@ -22,4 +22,14 @@
             tools:itemCount="4" />
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
+    <include
+        android:id="@+id/message_cannot_update_for_today_tab"
+        layout="@layout/message_cannot_get_update"
+        android:visibility="gone"/>
+
+    <include
+        android:id="@+id/progress_container"
+        layout="@layout/progress_bar"
+        android:visibility="gone" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
