--- a/weatherappmodule/src/main/res/layout/fragment_yesterday.xml
+++ b/weatherappmodule/src/main/res/layout/fragment_yesterday.xml
@@ -21,4 +21,14 @@
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
+    <include
+        android:id="@+id/message_cannot_get_update_for_yesterday_tab"
+        layout="@layout/message_cannot_get_update"
+        android:visibility="gone"/>
+
+    <include
+        android:id="@+id/progress_container"
+        layout="@layout/progress_bar"
+        android:visibility="gone" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
