--- a/weatherappmodule/src/main/res/layout/list_of_fixed_cities_weather.xml
+++ b/weatherappmodule/src/main/res/layout/list_of_fixed_cities_weather.xml
@@ -4,18 +4,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="150dp"
     android:layout_height="132dp"
-    android:layout_marginRight="27dp"
-    android:layout_marginBottom="16dp"
-    android:layout_marginLeft="24dp"
-    android:background="@drawable/background_for_city"
-    android:layout_marginEnd="27dp"
-    android:layout_marginStart="24dp">
+    android:layout_margin="16dp"
+    android:background="@drawable/city_list_rounder_corner_borders">
 
     <TextView
         android:id="@+id/city_title_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="11dp"
+        android:fontFamily="@font/font_roboto"
+        android:textAppearance="@style/city_name_style"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -33,6 +31,8 @@
         android:id="@+id/temperature_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/font_roboto"
+        android:textAppearance="@style/temperature_text_style"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
