--- a/weatherappmodule/src/main/res/layout/activity_main_screen.xml
+++ b/weatherappmodule/src/main/res/layout/activity_main_screen.xml
@@ -26,8 +26,13 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <include
-        android:id="@+id/message_no_location"
-        layout="@layout/message_no_location"
-        android:visibility="gone"/>
+        android:id="@+id/progress_container"
+        layout="@layout/progress_bar"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
