--- a/weatherappmodule/src/main/res/layout/fragment_city.xml
+++ b/weatherappmodule/src/main/res/layout/fragment_city.xml
@@ -22,23 +22,28 @@
         android:layout_marginVertical="16dp"
         android:hint="@string/edit_text_placeholder"
         android:inputType="text"
+        android:paddingLeft="44dp"
+        android:paddingStart="44dp"
+        android:paddingVertical="12dp"
         android:background="@drawable/edit_text_rounder_corner_borders"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="RtlSymmetry" />
 
     <TextView
         android:id="@+id/search_results_text_view"
         android:layout_width="0dp"
         android:layout_height="42dp"
         android:paddingLeft="24dp"
+        android:paddingStart="24dp"
         android:gravity="fill_vertical"
         android:text="@string/search_result_text"
         android:fontFamily="@font/font_roboto"
+        android:textAppearance="@style/search_result_style"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText"
-        android:paddingStart="24dp"
         tools:ignore="RtlSymmetry" />
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
@@ -75,10 +80,5 @@
         android:id="@+id/no_update_for_city_tab"
         layout="@layout/message_cannot_get_update"
         android:visibility="gone"/>
-
-    <include
-        android:id="@+id/progress_container"
-        layout="@layout/progress_bar"
-        android:visibility="gone" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
