--- a/weatherappmodule/src/main/res/layout/fragment_daily.xml
+++ b/weatherappmodule/src/main/res/layout/fragment_daily.xml
@@ -9,36 +9,33 @@
         android:id="@+id/city_name_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="16dp"
+        android:layout_marginVertical="16dp"
         android:layout_marginLeft="24dp"
-        android:layout_marginStart="24dp" />
+        android:layout_marginStart="24dp"
+        android:fontFamily="@font/font_roboto"
+        android:textAppearance="@style/header_city_title"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/daily_swipe_refresh"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginTop="82dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="81dp">
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_for_daily_forecast"
-            android:layout_width="0dp"
-            android:layout_height="0dp" />
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
     <include
         android:id="@+id/message_cannot_get_update_for_daily"
         layout="@layout/message_cannot_get_update"
         android:visibility="gone"/>
-
-    <include
-        android:id="@+id/progress_container"
-        layout="@layout/progress_bar"
-        android:visibility="gone" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
