--- a/weatherappmodule/src/main/res/layout/fragment_hourly.xml
+++ b/weatherappmodule/src/main/res/layout/fragment_hourly.xml
@@ -9,9 +9,11 @@
         android:id="@+id/hourly_city_and_date_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginLeft="12dp"
-        android:layout_marginStart="12dp"
+        android:layout_marginVertical="16dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginStart="24dp"
+        android:fontFamily="@font/font_roboto"
+        android:textAppearance="@style/header_city_title"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -19,7 +21,7 @@
         android:id="@+id/hourly_tab_layout"
         android:layout_width="156dp"
         android:layout_height="34dp"
-        android:layout_marginTop="41dp"
+        android:layout_marginTop="82dp"
         app:tabTextAppearance="@style/hourly_tab_layout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
