--- a/weatherappmodule/src/main/res/layout/list_of_hourly_forecast.xml
+++ b/weatherappmodule/src/main/res/layout/list_of_hourly_forecast.xml
@@ -3,15 +3,16 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="98dp">
+    android:layout_height="66dp"
+    android:layout_marginVertical="8dp"
+    android:layout_marginHorizontal="24dp">
 
     <TextView
         android:id="@+id/hourly_hour_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginTop="16dp"
+        android:fontFamily="@font/font_roboto"
+        android:textAppearance="@style/city_name_style"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -19,9 +20,9 @@
         android:id="@+id/hourly_temperature_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginTop="58dp"
+        android:layout_marginTop="42dp"
+        android:fontFamily="@font/font_roboto"
+        android:textAppearance="@style/temperature_text_style"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -29,8 +30,6 @@
         android:id="@+id/hourly_icon_of_weather_image_view"
         android:layout_width="38.5dp"
         android:layout_height="38.5dp"
-        android:layout_marginEnd="25.71dp"
-        android:layout_marginRight="25.71dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
