--- a/weatherappmodule/src/main/res/layout/list_of_search_cities_weather.xml
+++ b/weatherappmodule/src/main/res/layout/list_of_search_cities_weather.xml
@@ -3,15 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="66dp"
-    android:layout_marginBottom="10dp">
+    android:layout_marginHorizontal="24dp"
+    android:layout_marginVertical="8dp">
 
     <TextView
         android:id="@+id/search_city_name_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginTop="5dp"
+        android:fontFamily="@font/font_roboto"
+        android:textAppearance="@style/city_name_style"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -19,9 +19,9 @@
         android:id="@+id/search_temperature_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginTop="47dp"
+        android:layout_marginTop="42dp"
+        android:fontFamily="@font/font_roboto"
+        android:textAppearance="@style/temperature_text_style"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -29,8 +29,6 @@
         android:id="@+id/search_icon_of_weather_image_view"
         android:layout_width="38.5dp"
         android:layout_height="38.5dp"
-        android:layout_marginEnd="25.71dp"
-        android:layout_marginRight="25.71dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
