--- a/weatherappmodule/src/main/res/layout/message_no_location.xml
+++ b/weatherappmodule/src/main/res/layout/message_no_location.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -9,8 +10,8 @@
         android:id="@+id/icon_no_data_image_view"
         android:layout_width="179dp"
         android:layout_height="179dp"
-        android:layout_marginTop="210dp"
-        android:background="@drawable/icon_no_data"
+        android:layout_marginTop="165dp"
+        android:background="@drawable/ic_no_data"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -21,6 +22,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="68dp"
         android:text="@string/text_not_data"
+        android:fontFamily="@font/font_roboto"
+        android:textAppearance="@style/no_data_title_style"
         app:layout_constraintEnd_toEndOf="@+id/icon_no_data_image_view"
         app:layout_constraintStart_toStartOf="@+id/icon_no_data_image_view"
         app:layout_constraintTop_toBottomOf="@+id/icon_no_data_image_view" />
@@ -31,6 +34,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="@string/text_do_not_determinate"
+        android:fontFamily="@font/font_roboto"
+        android:textAppearance="@style/no_data_description"
         app:layout_constraintStart_toStartOf="@+id/data_not_available_text_view"
         app:layout_constraintEnd_toEndOf="@+id/data_not_available_text_view"
         app:layout_constraintTop_toBottomOf="@+id/data_not_available_text_view" />
@@ -40,8 +45,10 @@
         android:layout_width="168dp"
         android:layout_height="48dp"
         android:layout_marginTop="34dp"
+        app:backgroundTint="@color/black"
+        android:background="@drawable/button_background_style"
         android:text="@string/text_allow_access"
-        android:backgroundTint="@color/black"
+        style="@style/button_allow_access_text_style"
         app:layout_constraintEnd_toEndOf="@+id/do_not_determinate_text_view"
         app:layout_constraintStart_toStartOf="@+id/do_not_determinate_text_view"
         app:layout_constraintTop_toBottomOf="@+id/do_not_determinate_text_view" />
