--- a/weatherappmodule/src/main/res/layout/progress_bar.xml
+++ b/weatherappmodule/src/main/res/layout/progress_bar.xml
@@ -3,7 +3,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/progress_bar_group">
+    android:focusable="true"
+    android:clickable="true"
+    android:id="@+id/progress_bar_group" >
 
     <ProgressBar
         android:layout_width="wrap_content"
