--- a/weatherappmodule/src/main/res/values/custom_font_style.xml
+++ b/weatherappmodule/src/main/res/values/custom_font_style.xml
@@ -15,6 +15,7 @@
     </style>
 
     <style name="city_name_style">
+        <item name="android:textStyle">bold</item>
         <item name="android:textSize">20sp</item>
         <item name="android:letterSpacing" tools:targetApi="lollipop">0.01</item>
         <item name="android:textColor">#000000</item>
@@ -33,15 +34,52 @@
     </style>
 
     <style name="more_info_style">
+        <item name="android:textStyle">bold</item>
         <item name="android:textSize">24sp</item>
         <item name="android:letterSpacing" tools:targetApi="lollipop">0.01</item>
         <item name="android:textColor">#000000</item>
     </style>
 
     <style name="main_tab_layout_style">
+        <item name="android:textStyle">bold</item>
         <item name="android:textSize">11sp</item>
         <item name="fontFamily">@font/font_roboto</item>
         <item name="android:letterSpacing" tools:targetApi="lollipop">-0.01</item>
+        <item name="android:textColor">#000000</item>
+    </style>
+
+    <style name="search_result_style">
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">13sp</item>
+        <item name="android:letterSpacing" tools:targetApi="lollipop">-0.01</item>
+        <item name="android:textColor">#000000</item>
+        <item name="android:textAllCaps">true</item>
+    </style>
+
+    <style name="button_allow_access_text_style">
+        <item name="textAllCaps">false</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:letterSpacing" tools:targetApi="lollipop">-0.02</item>
+        <item name="android:textColor">#FFFFFF</item>
+    </style>
+
+    <style name="no_data_title_style">
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">24sp</item>
+        <item name="android:letterSpacing" tools:targetApi="lollipop">0.01</item>
+        <item name="android:textColor">#282828</item>
+    </style>
+
+    <style name="no_data_description">
+        <item name="android:textSize">15sp</item>
+        <item name="android:letterSpacing" tools:targetApi="lollipop">-0.02</item>
+        <item name="android:textColor">#A4A4A4</item>
+    </style>
+
+    <style name="header_city_title">
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">28sp</item>
+        <item name="android:letterSpacing" tools:targetApi="lollipop">0.01</item>
         <item name="android:textColor">#000000</item>
     </style>
 
