--- a/weatherappmodule/src/main/res/layout/activity_splash_screen.xml
+++ b/weatherappmodule/src/main/res/layout/activity_splash_screen.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SplashScreenActivity">
+    tools:context=".ui.SplashScreenActivity">
 
     <androidx.constraintlayout.widget.Group
         android:id="@+id/general_views_on_screen_group"
